# furniture_classification

./: .gitignore  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  RENDER_FIX.md  RENDER_READY.md  START_COMMAND_FIX.md  TENSORFLOW_FIX_COMPLETE.md  app.py  convert_to_savedmodel.py  create_keras_model.py  create_label_encoder.py  deploy_init.py  health_check.py  pyproject.toml  railway.toml  railway_start.sh  recreate_compatible_model.py  requirements.txt  start.sh  test_deployment_readiness.py  test_keras_model.py  test_savedmodel_prediction.py  test_tf215_model.py
.streamlit/: config.toml
database/: furniture_classification.db  populate_db.py
deploy/: DEPLOYMENT_GUIDE.md  health_check.py  render-config.md  start.sh
load_testing/: README.md  dashboard.py  demo.py  demo_results_20250802_184026.json  demo_results_20250802_184056.json  locustfile.py  performance_monitor.py  requirements.txt  run_load_tests.sh
load_testing/performance_monitoring/: performance_metrics_20250802_184141.json  performance_metrics_20250802_184142.csv  performance_summary_20250802_184142.json
load_testing/results/: api_test.html  api_test_stats_history.csv  demo_test.html  demo_test_failures.csv  demo_test_stats.csv  demo_test_stats_history.csv  final_test.html  final_test_failures.csv  final_test_stats.csv  final_test_stats_history.csv
models/: label_encoder_backup.pkl
models/furniture_model_savedmodel/: fingerprint.pb  saved_model.pb
models/furniture_model_savedmodel/variables/: variables.index
models/furniture_savedmodel/: fingerprint.pb  saved_model.pb
models/furniture_savedmodel/variables/: variables.index
notebooks/: furniture_model_classification.ipynb  model_results.json  processing.ipynb  setup_paths.py
processed_data/: config.pkl  label_encoder.pkl  paths_test.npy  paths_train.npy  paths_val.npy  y_test.npy  y_train.npy  y_val.npy
scripts/: check_requirements.py  run_app.sh  simple_api.py
src/: __init__.py
src/utils/: create_label_encoder.py  database.py  memory_optimized_model.py  model_utils.py
