[project]
name = "furniture-classification"
version = "1.0.0"
description = "A comprehensive deep learning application for classifying furniture images"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.28.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "Pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "h5py>=3.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "locust>=2.16.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
